crates/tachy/src/app/tests/snapshots/tachy__app__tests__dialogs__column_chooser.snap
---
source: crates/tachy/src/app/tests/dialogs.rs
expression: terminal.backend()
---
" tachy  1 t.csv                                                                                 view: all rows   NORMAL "
"    │ id  │ name    city    amount note                                        │ COLUMN                                 "
"    │ str │ str     str     str    str                                         │ id · str · col 1/5                     "
"  1 │ 1   │ user001 Lisbon  37.07  ok                                          │ sampling…                              "
"  2 │ 2   │ user002 Osaka   74.14  ok                                          │                                        "
"  3 │ 3   │ user003 Toronto 111.21 ok                                          │ TOP VALUES                             "
"  4 │ 4   │ user004 Nairobi 148.28                                             │ sampling…                              "
"  5 │ 5   │ user005 Berlin  185.35 ok                                          │                                        "
"  6 │ 6   │ user006 Lisbon  222.42 ok                                          │ RECORD                                 "
"  7 │ 7   │ user007 Osaka   259.49 ok                                          │ id            1                        "
"  8 │ 8   │ user008 Toronto 296.56                                             │ name          user001                  "
"  9 │ 9   │ user009 Nairobi 333.63 ok                                          │ city          Lisbon                   "
" 10 │ 10  │ user010 Berlin  370.70 ok                                          │ amount        37.07                    "
" 11 │ 11  │ user011 Lisbon  407.77 ok                                          │ note          ok                       "
" 12 │ 12  │ user012 Osaka   444.84                                             │                                        "
" 13 │ 13  │ user013 Toronto 48┌ Columns ─────────────────────────────────────────────────┐                              "
" 14 │ 14  │ user014 Nairobi 51│ [x] ❄ id                                             str │                              "
" 15 │ 15  │ user015 Berlin  55│ [x] name                                             str │                              "
" 16 │ 16  │ user016 Lisbon  59│ [x] city                                             str │                              "
" 17 │ 17  │ user017 Osaka   62│ [x] amount                                           str │                              "
" 18 │ 18  │ user018 Toronto 66│ [x] note                                             str │                              "
" 19 │ 19  │ user019 Nairobi 70│                                                          │                              "
" 20 │ 20  │ user020 Berlin  74│ ␣ toggle  J/K move  a all  / filter  ⏎ apply  Esc cancel │                              "
" 21 │ 21  │ user021 Lisbon  77└──────────────────────────────────────────────────────────┘                              "
" 22 │ 22  │ user022 Osaka   814.54 ok                                          │                                        "
" 23 │ 23  │ user023 Toronto 851.61 ok                                          │                                        "
" 24 │ 24  │ user024 Nairobi 888.68                                             │                                        "
" 25 │ 25  │ user025 Berlin  925.75 ok                                          │                                        "
" 26 │ 26  │ user026 Lisbon  962.82 ok                                          │                                        "
" 27 │ 27  │ user027 Osaka   999.89 ok                                          │                                        "
" 28 │ 28  │ user028 Toronto 36.96                                              │                                        "
" 29 │ 29  │ user029 Nairobi 73.03  ok                                          │                                        "
" 30 │ 30  │ user030 Berlin  110.10 ok                                          │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
" t.csv · 844 B · 30 rows · delim ,  quote none  utf-8  header · mmap · index ready                  R 1 / 30  C 1/5  0% "
" Space show/hide  JK move  a all  / filter  Enter apply  Esc cancel                                              ? help "
