crates/tachy/src/app/tests/snapshots/tachy__app__tests__dialogs__column_chooser_filtered.snap
---
source: crates/tachy/src/app/tests/dialogs.rs
expression: terminal.backend()
---
" tachy  1 t.csv                                                                                 view: all rows   NORMAL "
"    │ price │ name unit_price                                                  │ COLUMN                                 "
"    │ str   │ str  str                                                         │ price · str · col 1/3                  "
"  1 │ 1     │ a    2                                                           │ sampling…                              "
"                                                                               │                                        "
"                                                                               │ TOP VALUES                             "
"                                                                               │ sampling…                              "
"                                                                               │                                        "
"                                                                               │ RECORD                                 "
"                                                                               │ price         1                        "
"                                                                               │ name          a                        "
"                                                                               │ unit_price    2                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                              ┌ Columns ─────────────────────────────────────────────────┐                              "
"                              │ [x] ❄ price                                          str │                              "
"                              │ [x] unit_price                                       str │                              "
"                              │                                                          │                              "
"                              │ / pri                                                    │                              "
"                              │ ␣ toggle  J/K move  a all  / filter  ⏎ apply  Esc cancel │                              "
"                              └──────────────────────────────────────────────────────────┘                              "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
" t.csv · 28 B · 1 rows · delim ,  quote none  utf-8  header · mmap · index ready                     R 1 / 1  C 1/3  0% "
" Space show/hide  JK move  a all  / filter  Enter apply  Esc cancel                                              ? help "
