crates/tachy/src/app/tests/snapshots/tachy__app__tests__dialogs__detected_format_raw_120x40.snap
---
source: crates/tachy/src/app/tests/dialogs.rs
expression: terminal.backend()
---
" tachy  1 people.csv                                                                            view: all rows   NORMAL "
"    │ line                                                                     │ COLUMN                                 "
"    │ str                                                                      │ id · i64 · col 1/3                     "
"  1 │ id;name;city                                                             │ nulls     0.0%                         "
"  2 │ 1;"Doe, J";Berlin                                                        │ distinct  ~3                           "
"  3 │ 2;Smith;"Lis;bon"                                                        │ max width 1                            "
"  4 │ 3;Ng;Osaka                                                               │ min       1                            "
"                                                                               │ max       3                            "
"                                                                               │ mean      2                            "
"                                                                               │ p50       2                            "
"                                                                               │ p95       2.9                          "
"                                                                               │                                        "
"               ┌ Detected format ───────────────────────────────────────────────────────────────────────┐ws             "
"               │ delimiter        : (colon)*                                                            │███████      1 "
"               │ quote            "                                                                     │███████      1 "
"               │ escape           doubled                                                               │███████      1 "
"               │ header           no*                                                                   │               "
"               │ encoding         utf-8                                                                 │               "
"               │ line end         LF                                                                    │               "
"               │ quoted newlines  no                                                                    │               "
"               │                                                                                        │               "
"               │ id;name;city                                                                           │               "
"               │ 1;"Doe, J";Berlin                                                                      │               "
"               │ 2;Smith;"Lis;bon"                                                                      │               "
"               │                                                                                        │               "
"               │ Enter accept · Esc revert · d delimiter · h header · q quoting · r raw                 │               "
"               └────────────────────────────────────────────────────────────────────────────────────────┘               "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
" people.csv · 60 B · 3 rows · delim ;  quote "  utf-8  header · mmap · index ready                   R 1 / 3  C 1/3  0% "
" Enter accept  Esc revert  d delimiter  h header  q quoting  r raw                                               ? help "
