crates/tachy/src/app/tests/snapshots/tachy__app__tests__dialogs__detected_format_unchanged_120x40.snap
---
source: crates/tachy/src/app/tests/dialogs.rs
expression: terminal.backend()
---
" tachy  1 people.csv                                                                            view: all rows   NORMAL "
"    │  id │ name   city                                                        │ COLUMN                                 "
"    │ i64 │ str    str                                                         │ id · i64 · col 1/3                     "
"  1 │   1 │ Doe, J Berlin                                                      │ nulls     0.0%                         "
"  2 │   2 │ Smith  Lis;bon                                                     │ distinct  ~3                           "
"  3 │   3 │ Ng     Osaka                                                       │ max width 1                            "
"                                                                               │ min       1                            "
"                                                                               │ max       3                            "
"                                                                               │ mean      2                            "
"                                                                               │ p50       2                            "
"                                                                               │ p95       2.9                          "
"                                                                               │                                        "
"               ┌ Detected format ───────────────────────────────────────────────────────────────────────┐ws             "
"               │ delimiter        ; (semicolon)                                                         │███████      1 "
"               │ quote            "                                                                     │███████      1 "
"               │ escape           doubled                                                               │███████      1 "
"               │ header           yes                                                                   │               "
"               │ encoding         utf-8                                                                 │               "
"               │ line end         LF                                                                    │               "
"               │ quoted newlines  no                                                                    │               "
"               │                                                                                        │               "
"               │ id;name;city                                                                           │               "
"               │ 1;"Doe, J";Berlin                                                                      │               "
"               │ 2;Smith;"Lis;bon"                                                                      │               "
"               │                                                                                        │               "
"               │ Enter accept · Esc revert · d delimiter · h header · q quoting · r raw                 │               "
"               └────────────────────────────────────────────────────────────────────────────────────────┘               "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
"                                                                               │                                        "
" people.csv · 60 B · 3 rows · delim ;  quote "  utf-8  header · mmap · index ready                   R 1 / 3  C 1/3  0% "
" Enter accept  Esc revert  d delimiter  h header  q quoting  r raw                                               ? help "
