crates/tachy/src/app/tests/snapshots/tachy__app__tests__dialogs__detected_format_unchanged_80x24.snap
---
source: crates/tachy/src/app/tests/dialogs.rs
expression: terminal.backend()
---
" tachy  1 people.csv                                    view: all rows   NORMAL "
"    │  id │ name   city                                                         "
"    │ i64 │ str    str                                                          "
"  1 │   1 │ Doe, J Berlin                                                       "
"  ┌ Detected format ─────────────────────────────────────────────────────────┐  "
"  │ delimiter        ; (semicolon)                                           │  "
"  │ quote            "                                                       │  "
"  │ escape           doubled                                                 │  "
"  │ header           yes                                                     │  "
"  │ encoding         utf-8                                                   │  "
"  │ line end         LF                                                      │  "
"  │ quoted newlines  no                                                      │  "
"  │                                                                          │  "
"  │ id;name;city                                                             │  "
"  │ 1;"Doe, J";Berlin                                                        │  "
"  │ 2;Smith;"Lis;bon"                                                        │  "
"  │                                                                          │  "
"  │ Enter accept · Esc revert · d delimiter · h header · q quoting · r raw   │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"                                                                                "
"                                                                                "
" people.csv · 60 B · 3 rows · mmap · index ready             R 1 / 3  C 1/3  0% "
" Enter accept  Esc revert  d delimiter  h header  q quoting  r raw       ? help "
